--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -21,6 +21,11 @@
                         <i class="bi bi-circle"></i><span>Listado de documentos</span>
                     </a>
                 </li>
+                <li>
+                    <a routerLink="/dashboard/list-tipo-documentos">
+                        <i class="bi bi-circle"></i><span>Listado de tipo documentos</span>
+                    </a>
+                </li>
             </ul>
         </li>
 
@@ -48,6 +53,11 @@
                 <li>
                     <a routerLink="/dashboard/list-collaborator">
                         <i class="bi bi-card-list"></i><span>Listado de colaboradores</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/dashboard/list-colaboradores-deshabilitados">
+                        <i class="bi bi-card-list"></i><span>Listado de colaboradores deshabilitados</span>
                     </a>
                 </li>
             </ul>
