--- a/src/app/pages/cambiarclave/cambiarclave.component.css
+++ b/src/app/pages/cambiarclave/cambiarclave.component.css
@@ -1,4 +1,4 @@
-/* .mainDiv {
+.mainDiv {
     display: flex;
     min-height: 100%;
     align-items: center;
@@ -53,6 +53,7 @@
     cursor: not-allowed;
     border: solid 1px #eee;
   }
+  
   .buttonWrapper {
     margin-top: 40px;
   }
@@ -76,7 +77,7 @@
     background-color: #cccccc;
     color: #666666;
   }
-  
+  /*
   #loader {
     position: absolute;
     z-index: 1;
