--- a/src/app/pages/listdocumentos/listdocumentos.component.html
+++ b/src/app/pages/listdocumentos/listdocumentos.component.html
@@ -9,8 +9,17 @@
                         </div>
                         <div class="col-3 mt-2 d-flex flex-row justify-content-end p-2">
                             <button type="button" class="btn btn-primary" routerLink="/dashboard/documentos">
-                                <i class="bi bi-plus-lg"></i>Agregar documento
+                                <i class="bi bi-plus-lg"></i>Documento
                             </button>
+                            
+                            <button type="button" class="btn btn-info mx-2"  data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">
+                                <i class="bi bi-plus-lg"></i>Tipo documento
+                            </button>
+
+                            <!-- <button type="button" class="btn btn-primary">Documento</button>
+                            <button type="button" class="btn btn-secondary">Tipo documento</button> -->
+                        </div>
+                        <div class="col-3 mt-2 d-flex flex-row justify-content-end p-2">
                         </div>
                     </div>
                     <app-dtdocumentos></app-dtdocumentos>
@@ -19,4 +28,33 @@
         </div>
     </div>
 </div>
+
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Abrir modal para @mdo</button> -->
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Tipo de documento</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="formTipo" id="form">
+            <div class="mb-3">
+              <label for="tipo" class="col-form-label">Nombre:</label>
+              <input type="text" class="form-control" id="tipo" formControlName="tipo" placeholder="Ingresa el nombre del tipo de documento...">
+            </div>
+            <div class="alert alert-danger mt-2" [hidden]="tipo.valid || tipo.pristine">
+                Debes ingresar el tipo de documento
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="cancelar()">Cerrar</button>
+              <button type="button" id="btnGuardar" class="btn btn-primary" (click)="guardar()">Guardar</button>
+              
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
