--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -32,6 +32,12 @@
                         </a>
                     </li>
                     <li>
+                        <a class="dropdown-item d-flex align-items-center" routerLink="/dashboard/configuracion">
+                        <i class="bi bi-gear"></i>
+                        <span>Configuración</span>
+                        </a>
+                    </li>
+                    <li>
                         <hr class="dropdown-divider">
                     </li>
                     <li>
