--- a/src/app/pages/datatable/dtcolaboradoresdeshabilitados/dtcolaboradoresdeshabilitados.component.html
+++ b/src/app/pages/datatable/dtcolaboradoresdeshabilitados/dtcolaboradoresdeshabilitados.component.html
@@ -29,8 +29,8 @@
                 <td>{{ item.cargo }}</td>
                 <td>{{ item.utlimoIngreso }}</td>
                <td style="text-align: center;">
-                    <a type="button" class="btn btn-outline-warning ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" >
-                      <i class="bi bi-lock-fill"></i>
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" >
+                      <i class="bi bi-lock-fill" style="font-size: 1rem; color: rgb(248, 208, 29);"></i>
                     </a>
                 </td>
             </tr>
