--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
             <img src="./assets/img/logo.png" alt="">
             <span class="d-none d-lg-block"> ACACYPAC</span>
         </a>
-        <i class="bi bi-list toggle-sidebar-btn" id="ocultar" ></i>
+        <i class="bi bi-list toggle-sidebar-btn" id="ocuultar"></i>
     </div>
 
     <nav class="header-nav ms-auto">
@@ -31,12 +31,12 @@
                         <span>Mi perfil</span>
                         </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="dropdown-item d-flex align-items-center" routerLink="/dashboard/configuracion">
                         <i class="bi bi-gear"></i>
                         <span>Configuración</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li>
                         <hr class="dropdown-divider">
                     </li>
