--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -120,60 +120,14 @@
 <section class="section dashboard">
     <div class="row">
         <div class="col-lg-12">
-
-            <!-- <div class="card" *ngFor="let tipo of listaTipoDocumentos; let i = index" >
-                <div class="card-body" >
-                  <div class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="heading{{ tipo.tipo }}">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#miElementoPersonalizado' + tipo.tipo" aria-expanded="true" [attr.aria-controls]="'miElementoPersonalizado' + tipo.tipo">
-                              <h5>{{ tipo.tipo }}</h5>
-                            </button>
-                          </h2>
-                        <div [id]="'miElementoPersonalizado' + tipo.tipo" class="accordion-collapse collapse show"  [attr.data-bs-parent]="'#miAcordeonPersonalizado'">
-                        <div class="accordion-body">
-                            <li *ngFor="let item of listaDocumentos">
-                              
-                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
-                                            <br>
-                                            <span >{{ item.nombreArchivo }}</span>
-                                        </div>
-                                    </div>
-                                </a>
-                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id &&  item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
-                                            <br>
-                                            <span >{{ item.nombreArchivo }}</span>
-                                        </div>
-                                    </div>
-                                </a>
-                                
-                            </li>
-                        </div>
-                      </div>
-                    </div>
-                  </div>    
-                </div>
-            </div> -->
             
-            <div class="card" *ngFor="let tipo of listaTipoDocumentos; let i = index" style="background-color:  colorAleatorio ">
-
+            <div class="card" *ngFor="let tipo of listaTipoDocumentos; let i = index">
                 <div class="filter ">
                     <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                        <!-- <li class="dropdown-header text-start">
-                            <h6>Opciones</h6>
-                        </li> -->
-
                         <li><a class="dropdown-item" (click)="deshabilitar(tipo.id)">Deshabilitar</a></li>
                     </ul>
                 </div>
-
                 <div class="card-body" >
                   <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item mx-5">
@@ -186,9 +140,9 @@
                         <div class="accordion-body ">
                             
                             <li *ngFor="let item of listaDocumentos">
-                              
-                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id && item.colaborador_id == id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
-                                    <div class="card">
+
+                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id  && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 && item.lectura == 0"  (click)="cargarPDF(item.nombreArchivo)">
+                                    <div class="card cardStyle">
                                         <div class="card-body">
                                             <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
                                             <br>
@@ -196,7 +150,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a type="button" *ngIf="item.tipoDocumento_id == tipo.id && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 "  (click)="cargarPDF(item.nombreArchivo)">
+                                <!-- <a type="button" *ngIf="item.tipoDocumento_id == tipo.id && item.departamento_id == departamento_id && (item.fechaLimite >= fecha || item.fechaLimite == null) && item.disponible == 0 && item.lectura == 0"  (click)="cargarPDF(item.nombreArchivo)">
                                     <div class="card">
                                         <div class="card-body">
                                             <img  src="../../../assets/img/pdf.png" alt="" style="height: 100px; width: 100px;">
@@ -204,7 +158,7 @@
                                             <span >{{ item.nombreArchivo }}</span>
                                         </div>
                                     </div>
-                                </a>
+                                </a> -->
                             
                             </li>
                         </div>
