--- a/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
+++ b/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
@@ -1,17 +1,11 @@
-<div class="container">
+<!-- <div class="container">
     <div class="form">
         <div class="modal-body">
             <form [formGroup]="formDocumento" id="form">
                 
                 <div class="row">
-                    <div class="col-md-6 mb-2">
-                        <!-- <div class="wrapper">
-                            <form id="formFile">
-                                <input class="form-control" type="file" name="file" id="pdf" formControlName="pdf" (change)="changeArchivo($event)" accept="application/pdf" />
-                                <i class="bi bi-cloud-upload-fill"></i>
-                                <p id="title">Clic aquí para seleccionar el archivo</p>
-                            </form>
-                        </div> -->
+                    <div class="col-md-7 mb-2">
+        
 
                         <div class="upload-container">
                             <input type="file" id="pdf" (change)="changeArchivo($event)" accept="application/pdf" />
@@ -21,14 +15,14 @@
                             Debes seleccionar un archivo
                         </div>
                     </div>
-                    <div class="col-md-6 ">
+                    <div class="col-md-5 ">
                         <iframe src="" #myFrame style="width:100%; height:250px;" frameborder="0" id="filePDF"></iframe>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12 mb-2">
                         <label for="descripcion" class="form-label">Descripción de archivo</label>
-                        <input class="form-control" type="text" id="descripcion" formControlName="descripcion" placeholder="Agregar una descripción" required>
+                        <input class="form-control" type="text" id="descripcionDoc" formControlName="descripcion" placeholder="Agregar una descripción" required>
                     </div>
                     <div class="alert alert-danger mt-2" [hidden]="descripcion.valid || descripcion.pristine">
                         Debes agregar una pequeña descripción
@@ -57,18 +51,16 @@
                         <label class="form-label mt-2" for="fecha">Fecha limite disponible </label>
                         <input type="datetime-local" class="form-control" id="fechaLimite" >
                     </div>
-                    <!-- <div class="alert alert-danger mt-2" [hidden]="fechaLimite.valid || fechaLimite.pristine">
-                        Debes seleccionar una fecha
-                    </div> -->
                 </div>
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
-            <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" >Agregar</button>
+            <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()">Cancelar</button>
+            <button type="submit" id="btnAceptar" class="btn btn-success" (click)="cargar()" >Agregar</button>
+            <button type="submit" id="btnEditar" class="btn btn-success" (click)="editar()" hidden>Editar</button>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="mx-auto loader" *ngIf="isLoading">
     <div class="orbe" style="--index: 0"></div>
@@ -79,12 +71,12 @@
 </div>
 
 <div class="container table-responsive ">
-    <!-- <div class="d-flex justify-content-end mb-2">
+    <div class="d-flex justify-content-end mb-2">
         <button type="button" class="btn btn-primary ml-2 " id="archivo" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="cancelar()">
             <i class="fas fa-plus-plus"></i> Archivo
         </button>
-    </div> -->
-    <table [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+    </div>
+    <table [ngClass]="{'table-responsive': true}" id="miTabla" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
         <thead>
             <tr>
                 <th>N°</th>
@@ -98,18 +90,21 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of listaDocumentos; let i = index;">
-                <td>{{  i + 1 }}</td>
+                <td>{{  item.id }}</td>
                 <td>{{ item.descripcion }}</td>
                 <td>{{ item.actualizado | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
                 <td>{{ item.fechaLimite | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
                 <td>{{ item.lectura == 0 ? 'Si' : 'No' }}</td>
                 <td>{{ item.disponible == 0 ? 'Si' : 'No' }}</td>
                <td style="text-align: center;">
-                    <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="datosArchivo(item.documento_id)">
-                        <i class="bi bi-pencil-square"></i>
-                    </a> -->
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
-                        <i class="bi bi-trash"></i>
+                    <a type="button" *ngIf="item.documento_id" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="datosArchivo(item.id)">
+                        <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(3, 161, 253);"></i>
+                    </a>
+                    <a type="button" *ngIf="!item.id" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
+                        <i class="bi bi-trash" style="font-size: 1rem; color: rgb(253, 53, 3);"></i>
+                    </a>                   
+                    <a type="button" *ngIf="item.documento_id" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="deshabilitar(item.id)">
+                        <i class="bi bi-x-circle" style="font-size: 1rem; color: rgb(253, 53, 3);"></i>
                     </a>                   
                 </td>
             </tr>
@@ -132,21 +127,28 @@
         <div class="form">
             <div class="modal-body">
                 <form [formGroup]="formDocumento" id="form">
-                    <iframe src="" #myFrame style="width:100%; height:350px;" frameborder="0" id="filePDF"></iframe>
-
-                    <div class="mb-3">
-                        <label for="pdf" class="form-label">Selecciona el archivo</label>
-                        <input class="form-control" type="file" id="pdf" formControlName="pdf" (change)="changeArchivo($event)" required>
-                        <div class="alert alert-danger mt-2" [hidden]="pdf.valid || pdf.pristine">
-                            Debes seleccionar un archivo
+                    
+                    <div class="row">
+                        <div class="col-md-6 mb-2">    
+                            <div class="upload-container">
+                                <input type="file" id="pdf" (change)="changeArchivo($event)" accept="application/pdf" />
+                            </div>                         
+                            <div class="alert alert-danger mt-2" [hidden]="pdf.valid || pdf.pristine">
+                                Debes seleccionar un archivo
+                            </div>
+                        </div>
+                        <div class="col-md-6 ">
+                            <iframe src="" #myFrame style="width:100%; height:250px;" frameborder="0" id="filePDF"></iframe>
                         </div>
                     </div>
-                    <label for="descripcion" class="form-label">Descripción de archivo</label>
-                    <input class="form-control" type="text" id="descripcion" formControlName="descripcion" placeholder="Agregar una descripción" required>
-                    <div class="alert alert-danger mt-2" [hidden]="descripcion.valid || descripcion.pristine">
-                    Debes agregar una pequeña descripción
-                    </div>
                     <div class="row">
+                        <div class="col-md-12 mb-2">
+                            <label for="descripcion" class="form-label">Descripción de archivo</label>
+                            <input class="form-control" type="text" id="descripcionDoc" formControlName="descripcion" placeholder="Agregar una descripción" required>
+                        </div>
+                        <div class="alert alert-danger mt-2" [hidden]="descripcion.valid || descripcion.pristine">
+                            Debes agregar una pequeña descripción
+                        </div>
                         <div class="col-md-4 mb-2">
                             <label class="form-label mt-2">¿Solo lectura?</label>
                             <select [(ngModel)]='ngSelectL' class="form-select" id="lectura" formControlName="lectura" required>
@@ -169,7 +171,7 @@
                         </div>
                         <div class="col-md-4 mb-2">
                             <label class="form-label mt-2" for="fecha">Fecha limite disponible </label>
-                            <input type="datetime-local" class="form-control" id="fechaLimite" formControlName="fechaLimite">
+                            <input type="datetime-local" class="form-control" id="fechaLimite" >
                         </div>
                         <!-- <div class="alert alert-danger mt-2" [hidden]="fechaLimite.valid || fechaLimite.pristine">
                             Debes seleccionar una fecha
@@ -179,7 +181,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
-                <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" [disabled]="!formDocumento.valid">Agregar</button>
+                <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" >Agregar</button>
+                <button type="submit" id="btnEditar" class="btn btn-success" data-bs-dismiss="modal" (click)="editar()" hidden>Editar</button>
             </div>
         </div>
     </div>
