--- a/src/app/pages/datatable/dtpermisodocumentos/dtpermisodocumentos.component.html
+++ b/src/app/pages/datatable/dtpermisodocumentos/dtpermisodocumentos.component.html
@@ -41,8 +41,9 @@
             
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cerrar</button>
-            <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()">Agregar</button>
+            <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()">Cancelar</button>
+            <button type="submit" id="btnAceptarP" class="btn btn-success" (click)="cargar()" >Agregar</button>
+            <button type="submit" id="btnEditarP" class="btn btn-success" (click)="editar()" hidden>Editar</button>
         </div>
     </form>
 </div>
@@ -54,7 +55,7 @@
             <i class="fas fa-plus-plus"></i> Permiso
         </button>
     </div> -->
-    <table datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
+    <table datatable="datatable" id="miTabla" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover">
         <thead>
             <tr>
                 <th>N°</th>
@@ -71,11 +72,11 @@
                 <td>{{ item.nombre }}</td>
                 <td>{{ item.fechaRegistro  }}</td>
                 <td style="text-align: center;">
-                    <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" data-bs-toggle="modal" data-bs-target="#exampleModal2" (click)="datosPermisos(item.id)">
-                        <i class="bi bi-pencil-square"></i>
-                    </a> -->
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
-                        <i class="bi bi-trash"></i>
+                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"  (click)="datosPermisos(item.id, item.nombre)">
+                        <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(3, 161, 253);"></i>
+                    </a>
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
+                        <i class="bi bi-trash" style="font-size: 1rem; color: rgb(253, 53, 3);"></i>
                     </a>
                     <!-- <a type="button" class="btn btn-primary" id="btnActualizar" (click)="editar();" [disabled]="!formUser.valid">
                         Actualizar
