--- a/src/app/pages/datatable/dttipodocumentos/dttipodocumentos.component.html
+++ b/src/app/pages/datatable/dttipodocumentos/dttipodocumentos.component.html
@@ -22,14 +22,14 @@
                 <td>{{ item.tipo }}</td>
                 <td>{{ item.created_at | date: 'yyyy-MM-dd HH:mm:ss'}}</td>
                <td style="text-align: center;">
-                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"  [routerLink]="['/dashboard/tipo-documento', item.id]">
-                        <i class="bi bi-pencil-square"></i>
+                    <a type="button" class="" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"  [routerLink]="['/dashboard/tipo-documento', item.id]">
+                        <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(3, 153, 253);"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)">
-                        <i class="bi bi-trash"></i>
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarDocumento(item)">
+                        <i class="bi bi-trash" style="font-size: 1rem; color: rgb(253, 53, 3);"></i>
                     </a>
-                    <a type="button" class="btn btn-outline-warning ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" *ngIf="item.habilitado == 'N'">
-                        <i class="bi bi-lock-fill"></i>
+                    <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Desbloquear" (click)="desbloquear(item.id)" *ngIf="item.habilitado == 'N'">
+                        <i class="bi bi-lock-fill" style="font-size: 1rem; color: rgb(250, 170, 21);"></i>
                     </a>
                 </td>
                 
