--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
@@ -122,4 +122,158 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<section class="section profile">
+    <div class="row">
+      <div class="col-xl-4">
+
+        <div class="card">
+          <div class="card-body profile-card pt-3 d-flex flex-column align-items-center">
+
+            <div class="wrapper ">
+                <input  type="file" name="foto" id="foto" accept="image/*" hidden="hidden" (change)="changeFoto($event)"  />
+                <label class="position-relative " for="foto">
+                    <div class="position-absolute w-100 h-100 mx-auto align-items-center">
+                        <div class="mx-auto loader" *ngIf="isLoading">
+                            <div class="orbe" style="--index: 0"></div>
+                            <div class="orbe" style="--index: 1"></div>
+                            <div class="orbe" style="--index: 2"></div>
+                            <div class="orbe" style="--index: 3"></div>
+                            <div class="orbe" style="--index: 4"></div>
+                        </div>
+                    </div>
+                    <img *ngIf="!isLoading" src="{{avatar}}" id="imagen" alt="Profile" class="rounded-circle">
+                    <h3 class="mt-2">{{ nombreUser }}</h3>
+                </label>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-xl-8">
+
+        <div class="card">
+          <div class="card-body pt-3">
+            <ul class="nav nav-tabs nav-tabs-bordered">
+                <li class="nav-item">
+                    <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Editar Perfil</button>
+                </li>
+                <li class="nav-item">
+                    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Cambiar contraseña</button>
+                </li>
+            </ul>
+            <div class="tab-content pt-2">
+
+              <div class="tab-pane fade show active profile-overview" id="profile-overview">
+                <form [formGroup]="formUser" class="row g-3 mt-2" (ngSubmit)="guardar()">
+                    <div class="row">
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Número de documento</label>
+                            <input type="text" formControlName="dui" class="form-control" id="dui" placeholder="Ingresa el dui" (keypress)="validateFormat($event)" maxlength="10">
+                            <div class="alert alert-danger mt-2" [hidden]="dui.valid || dui.pristine">
+                                El Dui es obligatorio
+                            </div>
+                            
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Nombres</label>
+                            <input type="text" formControlName="nombres" id="nombres" class="form-control" placeholder="Ingresa los nombres" >
+                            <div class="alert alert-danger mt-2" [hidden]="nombres.valid || nombres.pristine">
+                                Los nombres son obligatorios
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Apellidos</label>
+                            <input type="text" formControlName="apellidos" id="apellidos" class="form-control" placeholder="Ingresa los apellidos" >
+                            <div class="alert alert-danger mt-2" [hidden]="apellidos.valid || apellidos.pristine">
+                                Los apellidos son obligatorios
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Agencia</label>
+                            <select [(ngModel)]='ngSelectA'  class="form-select" id="agencia" formControlName="agencia" (change)="handleChangeAgencia()">
+                                <option value="0" disabled selected>Selecciona</option>
+                                <option *ngFor="let e of listaAgencia;" [value]="e.id">
+                                    {{ e.nombre }}
+                                </option>
+                            </select>
+                            <div class="alert alert-danger mt-2" [hidden]="agencia.valid || agencia.pristine">
+                                Debes seleccionar una agencia
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Departamento</label>
+                            <select [(ngModel)]='ngSelectD' class="form-select" id="departamento" formControlName="departamento" (change)="handleChange()">
+                                <option value="0" disabled selected>Selecciona</option>
+                                <option *ngFor="let e of listaDepartamento" [value]="e.id">
+                                    {{ e.nombre }}
+                                </option>
+                            </select>
+                            <div class="alert alert-danger mt-2" [hidden]="departamento.valid || departamento.pristine">
+                                Debes seleccionar un departamento
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Cargo</label>
+                            <select [(ngModel)]='ngSelectC' class="form-select" id="cargo" formControlName="cargo" >
+                                <option value="0" disabled selected>Selecciona</option>
+                                <option *ngFor="let e of listaCargo" [value]=" e.id ">
+                                    {{ e.nombre }}
+                                </option>
+                            </select>
+                            <div class="alert alert-danger mt-2" [hidden]="cargo.valid || cargo.pristine">
+                                Debes seleccionar un cargo
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Teléfono</label>
+                            <input type="text" formControlName="telefono" id="telefono" class="form-control" placeholder="Ingresa el Telefono" (keypress)="validateFormatTel($event)" maxlength="9">
+                            <div class="alert alert-danger mt-2" [hidden]="telefono.valid || telefono.pristine">
+                                El Telefono es obligatorio
+                            </div>
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label">Email</label>
+                            <input type="correo" formControlName="correo" id="correo" class="form-control" placeholder="Ingresa el email" >
+                            <div class="alert alert-danger mt-2" [hidden]="correo.valid || correo.pristine">
+                            <span *ngIf="correo.errors?.['required']">
+                                El email es obligatorio
+                            </span>
+                            <span *ngIf="correo.errors?.['email']">
+                                El email debe de ser valido
+                            </span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer footer">
+                        <button type="button" class="btn btn-secondary cancelar" (click)="cancelar();" routerLink="/dashboard/list-collaborator">
+                            Cancelar
+                        </button>
+                        <button type="submit" class="btn btn-primary" id="btnGuardar" [disabled]="!formUser.valid">
+                            Guardar
+                        </button>
+                        <button type="button" class="btn btn-primary" id="btnActualizar" (click)="editar();" [disabled]="!formUser.valid">
+                            Actualizar
+                        </button>
+                    </div>
+                </form><!-- End Profile Edit Form -->
+
+              </div>
+
+              
+
+              <div class="tab-pane fade pt-3" id="profile-change-password">
+                <app-cambiarclave></app-cambiarclave>
+              </div>
+
+            </div><!-- End Bordered Tabs -->
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
