--- a/src/app/pages/tabs/tabdocumento/tabdocumento.component.html
+++ b/src/app/pages/tabs/tabdocumento/tabdocumento.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-12">
+        <!-- <div class="col-12">
             <div class=" rounded p-2">
                 <ul class="nav nav-tabs ms-auto">
                     <li class="nav-item">
@@ -35,6 +35,14 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div> -->
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-10">
+                <div class="card">
+                </div>
+                <app-dtarchivodocumentos (eventoEnviarDataDoc)="enviarDatos($event)" [idDoc]="idDoc"></app-dtarchivodocumentos>
             </div>
         </div>
     </div>
