--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,47 +9,13 @@
             </a>
         </li>
 
-        <li class="nav-heading" *ngIf="permisos == 1">Administración</li>
+        <li class="nav-heading" >Administración</li>
 
-         <li class="nav-item" *ngIf="permisos == 1">
-            <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-              <i class="bi bi-file-earmark-text-fill"></i><span>Documentación</span><i class="bi bi-chevron-down ms-auto"></i>
+          <li class="nav-item" *ngFor="let item of listaDetalle; let i = index; ">
+            <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 1 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 1) ">
+            <i class="bi bi-people-fill"></i><span *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 1 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 1) ">Colaboradores</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a routerLink="/dashboard/list-documentos">
-                        <i class="bi bi-circle"></i><span>Listado de documentos</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLink="/dashboard/list-tipo-documentos">
-                        <i class="bi bi-circle"></i><span>Listado de tipo documentos</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-
-      
-
-       <li class="nav-item" *ngIf="permisos == 1">
-            <a class="nav-link collapsed" data-bs-target="#evaluaciones-nav" data-bs-toggle="collapse" href="#">
-              <i class="bi bi-layout-text-window-reverse"></i><span>Evaluaciones</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="evaluaciones-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a routerLink="/dashboard/list-evaluaciones">
-                        <i class="bi bi-circle"></i><span>Listado de evaluaciones</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-
-
-        <li class="nav-item" *ngIf="permisos == 1">
-            <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-people-fill"></i><span>Colaboradores</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+            <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 1 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 1) ">
                 <li>
                     <a routerLink="/dashboard/list-collaborator">
                         <i class="bi bi-card-list"></i><span>Listado de colaboradores</span>
@@ -62,6 +28,61 @@
                 </li>
             </ul>
         </li>
+
+        
+         <li class="nav-item" *ngFor="let item of listaDetalle; let i = index; ">
+            <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 2 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 2) ">
+            <i class="bi bi-file-earmark-text-fill"></i><span *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 2 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 2) ">Documentación</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 2 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 2) ">
+                <li>
+                    <a routerLink="/dashboard/list-documentos">
+                        <i class="bi bi-circle"></i><span>Listado de documentos</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/dashboard/list-tipo-documentos">
+                        <i class="bi bi-circle"></i><span>Listado de tipo documentos</span>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="/dashboard/list-permisos">
+                        <i class="bi bi-circle"></i><span>Listado de permisos</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+
+      
+
+       <li class="nav-item" *ngFor="let item of listaDetalle; let i = index; ">
+            <a class="nav-link collapsed" data-bs-target="#evaluaciones-nav" data-bs-toggle="collapse" href="#" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 3 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 3) ">
+              <i class="bi bi-layout-text-window-reverse"></i><span *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 3 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 3) ">Evaluaciones</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="evaluaciones-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 3 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 3) ">
+                <li>
+                    <a routerLink="/dashboard/list-evaluaciones">
+                        <i class="bi bi-circle"></i><span>Listado de evaluaciones</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+
+       <li class="nav-item" *ngFor="let item of listaDetalle; let i = index; ">
+            <a class="nav-link collapsed" data-bs-target="#configuracion-nav" data-bs-toggle="collapse" href="#" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 4 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 4) ">
+              <i class="bi bi-gear"></i><span *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 4 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 4) ">Configuración</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="configuracion-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav" *ngIf="listaDetalle[i].colaborador_id == id && listaDetalle[i].menu_id == 4 || (listaDetalle[i].cargo_id == permisos && listaDetalle[i].departamento_id== departamento_id && listaDetalle[i].menu_id == 4) ">
+                <li>
+                    <a routerLink="/dashboard/list-configuracion">
+                        <i class="bi bi-circle"></i><span>Listado de configuraciones</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
+
+
+        
 
         <!-- <li class="nav-heading">Documentos</li>
 
